# TelekomExpport2

./: .env.template  .gitignore  Anmeldung bei Telekom.html  IBT _ Property Details.html  IBT _ Property Search.html  README.md  README_MULTI_SESSION.md  airtable_connector.py  check_missing_records.py  debug_page_0_data-ri_0.html  debug_page_8_data-ri_160.html  debug_search.py  debug_sessions.py  hello.py  missing_records_report_20250320_130213.html  playwright_test.html  property_data.md  property_data.py  pyproject.toml  requirements.txt  sync_changes.md  sync_changes.py  sync_diff_report.txt
old/: analyze_results.py  debug_extract_owners.py  debug_extract_paginated.py  debug_extract_search.py  debug_multiple_robust_otp.py  debug_multiple_sessions.py  ibt_property_search.py  monitor_extraction.py  multi_session_extractor.py  multi_session_extractor_new.py  record_actions.py  resume_extraction.py  run_extraction.sh  run_multi_extraction.sh  telekom_export copy.py  telekom_export.py  telekom_export_backup.py  telekom_export_debug.py  test_exploration_protocol.py  test_extraction.py  test_otp.py  test_owner_extraction.py
prd/: PRD.md  ibt_workflow.md  pagination_implementation.md
